index und style.css datei von GPT

--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-Hello World
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meine Demo-Seite</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Willkommen auf meiner Demo-Seite</h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#">Startseite</a></li>
+            <li><a href="#">Über uns</a></li>
+            <li><a href="#">Dienstleistungen</a></li>
+            <li><a href="#">Kontakt</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <h2>Hauptinhalt</h2>
+        <p>Dies ist eine einfache Demo-Seite, die HTML und CSS verwendet, um eine grundlegende Struktur zu zeigen.</p>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Meine Demo-Seite. Alle Rechte vorbehalten.</p>
+    </footer>
+</body>
+</html>
